2006-09-13  Karl Runge <runge@karlrunge.com>
	* x11vnc: document 'ssh -t' improved keyboard response.  add
	  extra rfbPE() around keystrokes. 
	  misc/enhanced_tightvnc_viewer: incorporate scripts, documentation,
	  etc. for the enhanced tightvnc viewer package.

2006-09-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: minor changes: REQ_ARGS for -sslGenCert, EV_SYN
	  SYN_REPORT check restore cursor most under -display WAIT.

2006-08-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: first pass at touchscreens via uinput.

2006-08-02  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -ssltimeout option; tweak ssl timeouts.

2006-07-28  Karl Runge <runge@karlrunge.com>
	* ssl_vncviewer: remove some bashisms, add features.
	* x11vnc: -rotate option (e.g. handheld), fix FPE on tru64.

2006-07-17  Karl Runge <runge@karlrunge.com>
	* x11vnc: enable --without-x builds for -rawfb only (NO_X11)

2006-07-11  Karl Runge <runge@karlrunge.com>
	* x11vnc: more tweaks to UINPUT, mostly mouse motion.

2006-07-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: add uinput support (-pipeinput UINPUT:...) for full
	  mouse and key input to linux console (e.g. for qt-embedded apps)
	  add -allinput for handleEventsEagerly.

2006-07-04  Karl Runge <runge@karlrunge.com>
	* x11vnc: 2nd -accept popup with WAIT, and UNIX: info for unixpw
	  login.  Use RFB_CLIENT_ON_HOLD for -unixpw. -unixpw white arrow
	  -license option.  Use getspnam if getpwnam is short.
	  abbrevs sc=, cm, ck for user:opts.

2006-06-23  Karl Runge <runge@karlrunge.com>
	* x11vnc: misc cleanup.

2006-06-18  Karl Runge <runge@karlrunge.com>
	* x11vnc: -grabkbd, -grabptr, -env options.  under -unixpw +
	  WAIT let user add some options after his username (e.g. runge:3/4)
	  -allowedcmds to fine tune vs. -nocmds.  general cleanup.

2006-06-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: word tune SSL Java viewer; fix multi-certs bug. Add 
	  -display WAIT:cmd=FINDDISPLAY builtin script and cmd=HTTPONCE