@@ -1,3 +1,8 @@
+2006-09-15  Karl Runge <runge@karlrunge.com>
+	* x11vnc: allow user set signals to ignore, clear DISPLAY in 
+	  -unixpw su_verify. -rawfb none same as null. 
+	* rfbserver.c: shorten rfbEncodingNewFBSize message.
+
 2006-09-13  Karl Runge <runge@karlrunge.com>
 	* x11vnc: document 'ssh -t' improved keyboard response.  add
 	  extra rfbPE() around keystrokes. 
